# Structura

./: .gitignore  MODULE.bazel  README.md
.hooks/: pre-commit
common/data_structures/: BUILD  lru_cache.h  sorted_binary_tree.h  sorted_binary_tree_test.cc  stack.h  stack_test.cc
data_structures/: BUILD  binary_tree.h  binary_tree_test.cc  linked_list.h  lru_cache.h  lru_cache_test.cc
data_structures/core/: binary_tree.h  linked_list.h  linked_list_test.cc  lru_cache.h  trie.cc  trie.h  trie_test.cc
data_structures/geometry/: quadtree_test.cc
geometry/: BUILD  distances.cc  quadtree.h  quadtree_test.cc
